<resources>
    <string name="toolbarLabel">MyQuizz - Guilliam MORISSET</string>
    <string name="app_name">MyQuizz</string>
    <string name="startButton">Démarrer le quizz !</string>
    <string name="pseudoEditText">Entre ton pseudo</string>
    <string name="switchThemeText">Change le thème</string>
    <string name="changeLanguageText">Langue</string>
    <string name="difficultyText">Choisir la difficulté</string>
    <string name="easyDifficultyText">Facile</string>
    <string name="normalDifficultyText">Normal</string>
    <string name="hardDifficultyText">Difficile</string>
    <string name="currentQuestionNumber">1</string>
    <string name="easy_numberOfQuestions">5</string>
    <string name="normal_numberOfQuestions">10</string>
    <string name="hard_numberOfQuestions">20</string>
    <string name="currentQuestionTextView">Question</string>
    <string name="validateAnswerButton">Valider la réponse</string>
    <string name="scoreTextView">Votre score</string>
    <string name="question1">Quelle planète est la planète la plus proche du Soleil ?</string>
    <string name="questionAnswer1">Mercure</string>
    <string name="question2">Quel est le plus grand désert du monde ?</string>
    <string name="questionAnswer2">Le désert de l\'Antarctique</string>
    <string name="question3">Quelle est la capitale de l\'Australie ?</string>
    <string name="questionAnswer3">Canberra</string>
    <string name="question4">Le Mont Everest est la plus haute montagne du monde.</string>
    <string name="questionAnswer4">Vrai</string>
    <string name="question5">Quel est l\'élément chimique représenté par le symbole \'O\' ?</string>
    <string name="questionAnswer5">Oxygène</string>
    <string name="question6">Quelle est la capitale de la France ?</string>
    <string name="questionAnswer6">Paris</string>
    <string name="question7">Quelle est la plus grande planète du système solaire ?</string>
    <string name="questionAnswer7">Jupiter</string>
    <string name="question8">Quelle est la ressource la plus utilisée dans le monde ?</string>
    <string name="questionAnswer8">Eau</string>
    <string name="question9">Quel monument est situé à Paris ?</string>
    <string name="questionAnswer9">La Tour Eiffel</string>
    <string name="question10">Quel animal est connu comme le meilleur ami de l\'homme ?</string>
    <string name="questionAnswer10">Chien</string>
    <string name="question11">Quel est le plus petit pays du monde ?</string>
    <string name="questionAnswer11">Vatican</string>
    <string name="question12">Combien de mois y a-t-il dans une année ?</string>
    <string name="questionAnswer12">12</string>
    <string name="question13">Quel est le nombre d\'heures dans une journée ?</string>
    <string name="questionAnswer13">24</string>
    <string name="question14">Quel sport utilise un ballon rond ?</string>
    <string name="questionAnswer14">Football</string>
    <string name="question15">Quelle couleur est mélangée avec le bleu pour obtenir le vert ?</string>
    <string name="questionAnswer15">Jaune</string>
    <string name="question16">Quel instrument de musique a des touches blanches et noires ?</string>
    <string name="questionAnswer16">Piano</string>
    <string name="question17">La Terre est-elle la troisième planète du système solaire ?</string>
    <string name="questionAnswer17">Vrai</string>
    <string name="question18">Quel pays est un micro-État en Europe ?</string>
    <string name="questionAnswer18">Monaco</string>
    <string name="question19">Quel est le plus long fleuve du monde ?</string>
    <string name="questionAnswer19">Nil</string>
    <string name="question20">Quelle planète est la plus proche du Soleil ?</string>
    <string name="questionAnswer20">Mercure</string>
    <string name="question21">Combien de côtés a un triangle ?</string>
    <string name="questionAnswer21">3</string>
    <string name="question22">Combien de couleurs principales y a-t-il dans un arc-en-ciel ?</string>
    <string name="questionAnswer22">7</string>
    <string name="question23">Quel est l\'élément chimique dont le symbole est \'O\' ?</string>
    <string name="questionAnswer23">Oxygène</string>
    <string name="question24">Quel mois suit juillet ?</string>
    <string name="questionAnswer24">Août</string>
    <string name="question25">Quel est l\'océan situé au sud de l\'Afrique ?</string>
    <string name="questionAnswer25">Atlantique</string>
    <string name="question26">Quel langage de programmation est connu pour sa simplicité ?</string>
    <string name="questionAnswer26">Python</string>
    <string name="question27">Quelle taille a une taille moyenne ?</string>
    <string name="questionAnswer27">Moyenne</string>
    <string name="question28">Combien de continents y a-t-il sur Terre ?</string>
    <string name="questionAnswer28">7</string>
    <string name="question29">L\'hiver est plus froid que l\'été ?</string>
    <string name="questionAnswer29">Vrai</string>
    <string name="question30">Combien de jours y a-t-il dans une semaine ?</string>
    <string name="questionAnswer30">7</string>
    <string name="question31">Quel est un lieu où l\'on peut se détendre et lire des livres ?</string>
    <string name="questionAnswer31">Bibliothèque</string>
    <string name="question32">Quelle direction est généralement indiquée à gauche d\'une carte ?</string>
    <string name="questionAnswer32">Ouest</string>
    <string name="question33">Quel langage est souvent utilisé pour le développement web ?</string>
    <string name="questionAnswer33">JavaScript</string>
    <string name="question34">Les dauphins sont-ils des mammifères ?</string>
    <string name="questionAnswer34">Vrai</string>
    <string name="question35">Quelle catégorie d\'aliments est souvent appelée légumes ?</string>
    <string name="questionAnswer35">Légumes</string>
    <string name="question36">Le soleil se lève-t-il à l\'ouest ?</string>
    <string name="questionAnswer36">Faux</string>
    <string name="question37">Quel est un moyen de transport utilisé dans les airs ?</string>
    <string name="questionAnswer37">Avion</string>
    <string name="question38">A quel âge devient-on adulte en France ?</string>
    <string name="questionAnswer38">18</string>
    <string name="question39">Combien de continents y a-t-il sur Terre ?</string>
    <string name="questionAnswer39">7</string>
    <string name="question40">Quel meuble est souvent trouvé dans une chambre à coucher ?</string>
    <string name="questionAnswer40">Lit</string>
    <string name="question41">Les baleines sont-elles des poissons ?</string>
    <string name="questionAnswer41">Faux</string>
    <string name="question42">Combien de jours y a-t-il en février lors d\'une année bissextile ?</string>
    <string name="questionAnswer42">29</string>
    <string name="question43">L\'eau gèle-t-elle à 0°C ?</string>
    <string name="questionAnswer43">Vrai</string>
    <string name="question44">Combien de continents y a-t-il en Asie ?</string>
    <string name="questionAnswer44">6</string>
    <string name="question45">Les chiens sont-ils des carnivores ?</string>
    <string name="questionAnswer45">Vrai</string>
    <string name="question46">Quelle direction est généralement indiquée au sud d\'une carte ?</string>
    <string name="questionAnswer46">Sud</string>
    <string name="question47">Quelle est la capitale des États-Unis ?</string>
    <string name="questionAnswer47">Washington D.C.</string>
    <string name="question48">Quel mot questionne la manière dont quelque chose se fait ?</string>
    <string name="questionAnswer48">Comment</string>
    <string name="question49">Le ciel est-il généralement bleu pendant une journée ensoleillée ?</string>
    <string name="questionAnswer49">Vrai</string>
    <string name="question50">Combien de pattes a une araignée ?</string>
    <string name="questionAnswer50">8</string>
    <string name="usernameToast">Veuillez entrer votre pseudo</string>
    <string name="usernameLengthToast">Pseudo trop long</string>
    <string name="usernameCharToast">Le pseudo ne doit pas contenir de \':\'</string>
    <string name="answerToast">"Veuillez sélectionner une réponse"</string>
    <string name="selectLanguage">Sélectionner une langue</string>
    <string name="returnToStartButton">Ecran principal</string>
    <string name="restartGameButton">Rejouer</string>
    <string name="shareButton">Partager</string>
    <string name="shareText">Regardez mon nouveau score sur MyQuizz :</string>
    <string name="scoresTextView">Leaderboard</string>
    <string name="selectDifficulty">Sélectionner une difficulté</string>
    <string name="selectLeaderboardDifficulty">Sélectionner la difficulté du leaderboard</string>
    <string name="nextQuestion">Prochaine question</string>
    <string name="correctAnswer">Bonne réponse !</string>
    <string name="wrongAnswer">Mauvaise réponse ! La bonne réponse était :</string>
    <string name="separatorChar">:</string>
    <string name="leaderboardButton">Leaderboard</string>
    <string name="maxScores">10</string>
    <string name="noScores">Aucun score pour le moment</string>
    <string name="shareTextChooser">Partager via</string>
</resources>