<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StartActivity">

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appNameTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.21"
            android:scaleX="5"
            android:scaleY="5"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/pseudoEditText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.563"
            app:layout_constraintHorizontal_bias="0.497" android:autofillHints="" tools:ignore="LabelFor"
            android:minHeight="48dp" android:hint="@string/pseudoEditText"/>
    <Button
            android:text="@string/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.677"
            app:layout_constraintHorizontal_bias="0.497"/>
    <Switch
            android:text="@string/switchThemeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.044"
            app:layout_constraintHorizontal_bias="0.922" tools:ignore="UseSwitchCompatOrMaterialXml"
            android:minHeight="48dp"/>

    <Button
            android:text="@string/changeLanguageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changeLanguageButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.043"
            app:layout_constraintHorizontal_bias="0.097"/>
    <Button
            android:text="@string/leaderboardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leaderboardButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.948"
            app:layout_constraintHorizontal_bias="0.137"/>

</androidx.constraintlayout.widget.ConstraintLayout>